# basic-merkle-tree-rs

./: Cargo.toml  README.md
benches/: algos.rs
examples/: basic_sha3.rs  speed_sha3.rs
src/: hash.rs  lib.rs  proof.rs  tree.rs
tests/: merkle_basic.rs
